--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+body{
+    font-family: "Roboto", "Arial ", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+}
+h2{
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 700;
+}
+h3{
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 700;
+}
 .site-header {
     background-color: #fff;
 }
@@ -17,6 +32,7 @@
 }
 
 .main-link {
+    font-weight: 700;
     font-size: 13px;
     line-height: 15px;
     color: white;
@@ -48,13 +64,6 @@
 .hero h2 {
     font-size: 40px;
     line-height: 1.2;
-    letter-spacing: 0.5px;
-}
-
-.hero p {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.5px;
 }
 
 .features li {
@@ -71,15 +80,12 @@
     width: 440px;
     font-size: 72px;
     line-height: 1.2;
-    letter-spacing: 0.5px;
 }
 
 .features h3 {
     width: 214px;
-    font-weight: 700;
     font-size: 24px;
     line-height: 120%;
-    letter-spacing: 0.5px;
     color: #000000;
 }
 
@@ -93,17 +99,8 @@
 }
 
 .promo h2 {
-    font-weight: 700;
     font-size: 40px;
     line-height: 120%;
-    letter-spacing: 0.5px;
-}
-
-.promo p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.5px;
 }
 
 .promo p strong {
@@ -130,12 +127,11 @@ footer hr {
 }
 
 .site-footer-links {
+    line-height: 19px;
     width: 224px;
 }
 
 .site-footer-links a {
-    font-size: 17px;
-    line-height: 16px;
-    text-decoration: none;
+    text-decoration:  none;
     color: #252420;
 }
