--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,31 @@
-body{
+body {
     font-family: "Roboto", "Arial ", sans-serif;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.5px;
     font-weight: 400;
 }
-h2{
+
+h2 {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 700;
 }
-h3{
+
+h3 {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 700;
 }
+
 .site-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: #fff;
+}
+
+.site-header div {
+    display: flex;
+    align-items: center;
 }
 
 .sitenav-link {
@@ -29,6 +40,7 @@ h3{
 
 .site-header ul {
     list-style: none;
+    display: flex;
 }
 
 .main-link {
@@ -44,6 +56,9 @@ h3{
 .hero {
     background: #252420;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .hero-content {
@@ -64,6 +79,12 @@ h3{
 .hero h2 {
     font-size: 40px;
     line-height: 1.2;
+}
+
+.features ul {
+    justify-content: space-between;
+    display: flex;
+    list-style: none;
 }
 
 .features li {
@@ -90,6 +111,9 @@ h3{
 }
 
 .promo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #252420;
     color: white;
 }
@@ -117,6 +141,15 @@ footer {
     background-color: #f8f8f8;
 }
 
+.site-footer-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.site-footer-top ul{
+    display: flex;
+    align-items: center;
+}
 footer ul {
     list-style: none;
 }
@@ -125,13 +158,16 @@ footer hr {
     height: 2px;
     background-color: rgba(37, 36, 32, 0.5);
 }
-
+.site-footer-bottom{
+    display: flex;
+    justify-content: space-between;
+}
 .site-footer-links {
     line-height: 19px;
     width: 224px;
 }
 
 .site-footer-links a {
-    text-decoration:  none;
+    text-decoration: none;
     color: #252420;
 }
