added hover, active styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,18 @@ h3 {
     align-items: center;
 }
 
+.logo-link {
+    transition: opacity 0.4s ease;
+}
+
+.logo-link:hover {
+    opacity: 0.8;
+}
+
+.logo-link:active {
+    opacity: 0.6;
+}
+
 .sitenav-link {
     font-weight: 500;
     font-size: 13px;
@@ -36,6 +48,16 @@ h3 {
     text-transform: uppercase;
     text-decoration: none;
     color: #000;
+    transition: opacity 0.4s ease,
+    color 0.4s ease;
+}
+
+.sitenav-link:hover {
+    color: #FF7500;
+}
+
+.sitenav-link:active {
+    opacity: 0.6;
 }
 
 .site-header ul {
@@ -50,8 +72,17 @@ h3 {
     color: white;
     background-color: #FF7500;
     text-decoration: none;
+    transition: color 0.4s ease,
+    opacity 0.4s ease;
 }
 
+.main-link:hover {
+    opacity: 0.8;
+}
+
+.main-link:active {
+    opacity: 0.6;
+}
 
 .hero {
     background: #252420;
@@ -141,15 +172,31 @@ footer {
     background-color: #f8f8f8;
 }
 
-.site-footer-top{
+.site-footer-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.site-footer-top ul{
+
+.site-footer-socials {
     display: flex;
     align-items: center;
 }
+
+.site-footer-socials a {
+    transition: color 0.4s ease,
+    opacity 0.4s ease;
+    color: #252420;
+}
+
+.site-footer-socials a:hover {
+    color: #FF7500;
+}
+
+.site-footer-socials a:active {
+    opacity: 0.6;
+}
+
 footer ul {
     list-style: none;
 }
@@ -158,10 +205,12 @@ footer hr {
     height: 2px;
     background-color: rgba(37, 36, 32, 0.5);
 }
-.site-footer-bottom{
+
+.site-footer-bottom {
     display: flex;
     justify-content: space-between;
 }
+
 .site-footer-links {
     line-height: 19px;
     width: 224px;
@@ -170,4 +219,14 @@ footer hr {
 .site-footer-links a {
     text-decoration: none;
     color: #252420;
+    transition: color 0.4s ease,
+    opacity 0.4s ease;
+}
+
+.site-footer-links a:hover {
+    color: #FF7500;
+}
+
+.site-footer-links a:active {
+    opacity: 0.6;
 }
