--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ body {
     font-weight: 400;
 }
 
+*:focus {
+    outline: 2px dotted #FF7500;
+    outline-offset: 3px;
+}
+
 h2 {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 700;
