removed unnecessary spaces under images

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,9 @@ h3 {
     display: flex;
     align-items: center;
 }
-
+.logo-link img{
+    display: block;
+}
 .logo-link {
     transition: opacity 0.4s ease;
 }
