--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,66 @@
+:root {
+    --accent-color: #ff7500;
+
+    --text-font: "Roboto", "Arial", sans-serif;
+    --heading-font: "Roboto Condensed", "Roboto", "Arial", sans-serif;
+}
+
+html {
+    box-sizing: border-box;
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
 body {
-    font-family: "Roboto", "Arial ", sans-serif;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 0;
+    margin: 0;
     font-size: 16px;
     line-height: 1.5;
+    font-family: var(--text-font);
+    color: #000;
     letter-spacing: 0.5px;
-    font-weight: 400;
 }
 
 *:focus {
-    outline: 2px dotted #FF7500;
+    outline: 2px dotted var(--accent-color);
     outline-offset: 3px;
 }
 
-h2 {
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 700;
+
+/* CONTAINER */
+.container {
+    width: 100%;
+    max-width: 1140px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-h3 {
-    font-family: "Roboto Condensed", sans-serif;
-    font-weight: 700;
-}
 
+/* SITE-HEADER */
 .site-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #fff;
     padding-top: 16px;
     padding-bottom: 16px;
-    border-top: 5px solid #FF7500;
+    border-top: 5px solid var(--accent-color);
+    background-color: #fff;
 }
 
-.site-header div {
+.site-header-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
-.logo-link img{
-    display: block;
-}
+
 .logo-link {
     transition: opacity 0.4s ease;
 }
@@ -50,54 +73,66 @@ h3 {
     opacity: 0.6;
 }
 
+.logo-link img {
+    display: block;
+}
+
+.site-header-actions {
+    display: flex;
+    align-items: center;
+}
+
+
+/* SITENAV */
+.sitenav-list {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    margin-right: 32px;
+    list-style: none;
+}
+
+.sitenav-item {
+    margin-right: 32px;
+}
+
+.sitenav-item:last-child {
+    margin-right: 0;
+}
+
 .sitenav-link {
-    font-weight: 500;
     font-size: 13px;
     line-height: 15px;
+    font-weight: 500;
     letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
     color: #000;
-    transition: opacity 0.4s ease,
-    color 0.4s ease;
+    transition: color 0.4s ease,
+    opacity 0.4s ease;
 }
 
 .sitenav-link:hover {
-    color: #FF7500;
+    color: var(--accent-color);
 }
 
 .sitenav-link:active {
     opacity: 0.6;
 }
 
-.site-header ul {
-    padding: 0;
-    list-style: none;
-    display: flex;
-    margin: 0;
-    margin-right: 32px;
-}
 
-.site-header li {
-    margin-right: 32px;
-}
-
-.site-header li:last-child {
-    margin: 0;
-}
-
+/* MAIN-LINK */
 .main-link {
     display: inline-block;
-    border-radius: 4px;
     padding: 12px 24px;
-    font-weight: bold;
+    border-radius: 4px;
     font-size: 13px;
     line-height: 15px;
-    color: white;
-    background-color: #FF7500;
+    font-weight: bold;
+    background-color: var(--accent-color);
+    color: #fff;
     text-decoration: none;
-    transition: color 0.4s ease,
-    opacity 0.4s ease;
+    transition: opacity 0.4s ease;
 }
 
 .main-link:hover {
@@ -108,65 +143,89 @@ h3 {
     opacity: 0.6;
 }
 
+
+/* HERO */
 .hero {
-    background: #252420;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     padding-top: 80px;
     padding-bottom: 80px;
+    background-color: #252420;
+    color: #fff;
+}
+
+.hero-container {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .hero-content {
     width: 390px;
 }
 
-.hero-img {
-    width: 510px;
-    height: 510px;
-    border-radius: 8px;
-}
-
 .orange-line {
     width: 80px;
     height: 3px;
-    border: none;
-    background: #FF7500;
+    border: 0;
     margin: 0;
     margin-bottom: 40px;
+    background-color: var(--accent-color);
 }
 
-.hero h2 {
+.hero-heading {
+    margin-top: 0;
+    margin-bottom: 24px;
     font-size: 40px;
     line-height: 1.2;
-    margin: 0;
-    margin-bottom: 24px;
+    font-family: var(--heading-font);
 }
 
-.hero-content p {
+.hero-text {
     margin-top: 0;
     margin-bottom: 32px;
 }
 
+.hero-img {
+    position: absolute;
+    right: 20px;
+    top: -40px;
+    width: 510px;
+    height: 510px;
+    border-radius: 8px;
+    box-shadow: 24px 24px 0 0 rgba(255, 117, 0, 0.6);
+}
+
+/* FEATURES */
 .features {
     padding-top: 210px;
     padding-bottom: 210px;
 }
 
-.features ul {
+.features-heading {
+    width: 440px;
+    margin-top: 0;
+    margin-bottom: 72px;
+    font-size: 72px;
+    line-height: 1.2;
+    font-family: var(--heading-font);
+    letter-spacing: 0.5px;
+}
+
+.features-list {
+    display: flex;
     padding: 0;
     margin: 0;
-    display: flex;
     list-style: none;
 }
 
-.features li {
+
+/* FEATURE */
+.feature {
     width: 340px;
     margin-right: 40px;
 }
 
-.features li:last-child {
+.feature:last-child {
     margin-right: 0;
 }
 
@@ -174,75 +233,88 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
     width: 100px;
     height: 100px;
-    background: rgba(255, 117, 0, 0.2);
+    margin-bottom: 32px;
+    border-radius: 50%;
+    background-color: rgba(255, 117, 0, 0.2);
 }
 
-.features h2 {
-    width: 440px;
-    font-size: 72px;
-    line-height: 1.2;
-    margin: 0;
-    margin-bottom: 72px;
-}
-
-.features h3 {
-    width: 214px;
+.feature-title {
+    margin-top: 0;
+    margin-bottom: 12px;
     font-size: 24px;
-    line-height: 120%;
-    color: #000000;
+    line-height: 1.2;
+    font-family: var(--heading-font);
 }
 
+.feature-info {
+    margin: 0;
+}
+
+
+/* PROMO */
 .promo {
+    padding-top: 120px;
+    padding-bottom: 160px;
+}
+
+.promo-inner {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 64px;
     border-radius: 12px;
     background-color: #252420;
-    color: white;
+    color: #fff;
 }
 
-.promo div {
+.promo-content {
     width: 440px;
 }
 
-.promo h2 {
+.promo-heading {
+    margin-top: 0;
+    margin-bottom: 24px;
     font-size: 40px;
-    line-height: 120%;
-    margin: 0;
+    line-height: 48px;
+    font-family: var(--heading-font);
+}
+
+.promo-info-wrapper {
     margin-bottom: 24px;
 }
 
-.promo-text-wrapper {
-    margin-bottom: 24px
-}
-
-.promo p {
-    margin: 0;
+.promo-text {
+    margin-top: 0;
     margin-bottom: 12px;
 }
 
-.promo p:last-child {
+.promo-text:last-child {
     margin-bottom: 0;
 }
 
-.promo p strong {
-    color: #FF7500;
+.promo-highlight {
+    color: var(--accent-color);
 }
 
-.promo img {
+.promo-img {
+    position: absolute;
+    right: 64px;
+    bottom: 64px;
     width: 440px;
     height: 440px;
-    object-fit: cover;
     border-radius: 12px;
+    object-fit: cover;
 }
 
-footer {
-    background-color: #f8f8f8;
+
+/* SITE-FOOTER */
+.site-footer {
     padding-top: 56px;
     padding-bottom: 56px;
+    background-color: #f8f8f8;
 }
 
 .site-footer-top {
@@ -251,13 +323,18 @@ footer {
     align-items: center;
 }
 
+.site-footer ul {
+    padding: 0;
+    list-style: none;
+}
+
 .site-footer-socials {
     display: flex;
     align-items: center;
     padding: 0;
     margin: 0;
 }
-
+/* Img block */
 .site-footer-socials li {
     margin-right: 16px;
 }
@@ -267,63 +344,62 @@ footer {
 }
 
 .site-footer-socials a {
-    transition: color 0.4s ease,
-    opacity 0.4s ease;
+    display: block;
     color: #252420;
-    display: block;
-}
-
-.site-footer-socials svg {
-    display: block;
 }
 
 .site-footer-socials a:hover {
-    color: #FF7500;
+    color: var(--accent-color);
 }
 
 .site-footer-socials a:active {
     opacity: 0.6;
 }
 
-footer ul {
-    list-style: none;
+.site-footer-socials svg {
+    display: block;
 }
 
-footer hr {
+.site-footer-divider {
     height: 2px;
-    background-color: rgba(37, 36, 32, 0.5);
     border: 0;
     margin-top: 40px;
     margin-bottom: 64px;
+    background-color: rgba(37, 36, 32, 0.5);
 }
 
 .site-footer-bottom {
     display: flex;
-    justify-content: space-between;
-
 }
 
 .site-footer-links {
-    line-height: 19px;
     width: 224px;
     padding: 0;
     margin: 0;
     margin-right: 68px;
+    list-style: none;
+    line-height: 19px;
 }
 
 .site-footer-links:last-child {
     margin-right: 0;
 }
 
+.site-footer-links li {
+    margin-bottom: 16px;
+}
+
+.site-footer-links li:last-child {
+    margin-bottom: 0;
+}
+
 .site-footer-links a {
     text-decoration: none;
     color: #252420;
-    transition: color 0.4s ease,
-    opacity 0.4s ease;
 }
 
 .site-footer-links a:hover {
-    color: #FF7500;
+    color: var(--accent-color);
 }
 
 .site-footer-links a:active {
