--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,18 @@
 html {
     box-sizing: border-box;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
 
 body {
     display: flex;
+    flex-direction: column;
     height: 100%;
     padding: 0;
     margin: 0;
