--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,13 @@
 html {
     box-sizing: border-box;
     height: 100%;
+    scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 
